<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="16dp"
        android:layout_below="@id/toolbar"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item_recipe"/>

    <RelativeLayout
        android:id="@+id/rlProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_below="@id/progressBar"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_error_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_caption"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_below="@id/tv_error_caption"/>

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_error"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/try_again"/>

    </RelativeLayout>

</RelativeLayout>